<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">智慧医疗</string>
    <string name="home">首页</string>
    <string name="registration">预约挂号</string>
    <string name="online_inquiry">在线问诊</string>
    <string name="personal">个人中心</string>
    <string name="personInfo">个人资料</string>
    <string name="my_advice">我的咨询</string>
    <string name="my_doctor">我的医生</string>
    <string name="health_social">健康社交</string>
    <string name="account_management">账户管理</string>
    <string name="set_up">设置</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_null">反馈内容不能为空</string>
    <string name="feedback_successful">反馈提交成功</string>
    <string name="doctor_info">医生简介</string>
    <string name="phy_exam_data">体检数据</string>
    <string name="more_detail">更多评论</string>
    <string name="evaluations_doctor">患者评价</string>
    <string name="health_information">健康资讯</string>
    <string name="modify_password">修改密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="enter_new_password">请输入新密码</string>
    <string name="enter_sure_password">请确认新密码</string>
    <string name="enter_old_password">请输入旧密码</string>
    <string name="username_or_pad_empty">用户名或密码为空</string>
    <string name="email_empty">邮箱地址不能为空</string>
    <string name="username_empty">用户名不能为空</string>
    <string name="username_not">邮箱地址不合法</string>
    <string name="new_psd_empty">新密码不能为空</string>
    <string name="new_psd_empty_len">新密码长度不能少于6位</string>
    <string name="code_empty">验证码不能为空</string>
    <string name="sure_psd_empty">确认新密码不能为空</string>
    <string name="sure_psd_empty_len">确认新密码长度不能少于6位</string>
    <string name="password_reset_successful">重新设置密码成功</string>
    <string name="two_passwords_not_match">两次新密码不一致</string>
    <string name="pad_or_confirmationPas_empty">密码和确认密码不能为空</string>
    <string name="passwords_or_confirmation_not_match">密码和确认密码不一致</string>
    <string name="update_password">修改密码成功,请重新登录</string>
    <string name="home_search">医生搜索</string>
    <string name="pad_login">密码登录</string>
    <string name="verification_code">获取验证码</string>
    <string name="please_enter_username">请输入用户名</string>
    <string name="please_enter_phone">请输入手机号码</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_enter_code">请输入验证码</string>
    <string name="please_enter_email_address">请输入邮箱地址</string>
    <string name="phone_login">手机验证登录</string>
    <string name="register">注册</string>
    <string name="register_successful">注册成功,快去邮箱激活吧~</string>
    <string name="login">登录</string>
    <string name="email">电子邮箱</string>
    <string name="login_notice">账号尚未激活,是否重新发送激活邮件</string>
    <string name="exit_waiting">是否退出诊室界面</string>
    <string name="push_notifications">推送提醒</string>
    <string name="password_modification">密码修改</string>
    <string name="exit_login">退出登录</string>
    <string name="open_push">开启推送</string>
    <string name="close_push">关闭推送</string>
    <string name="set_default">设为默认</string>
    <string name="image_advisory">图文咨询</string>
    <string name="voice_advisory">语音咨询</string>
    <string name="video_advisory">视频咨询</string>
    <string name="doctor_introduced">医生介绍</string>
    <string name="popular_doctor">热门医生</string>
    <string name="good_at">擅 长</string>
    <string name="introduction">简 介</string>
    <string name="add_patient">新增就诊人</string>
    <string name="update_patient">更新就诊人</string>
    <string name="select_patient">选择就诊人</string>
    <string name="select_patient_management">就诊人管理</string>
    <string name="buy_image_advisory">购买图文咨询</string>
    <string name="buy_voice_advisory">购买语音咨询</string>
    <string name="buy_video_advisory">购买视频咨询</string>
    <string name="dispatching">配送地址</string>
    <string name="dispatching_manage">配送地址管理</string>
    <string name="add_dispatching_location">添加配送地址</string>
    <string name="update_dispatching_location">更新配送地址</string>
    <string name="drug_orders">药品订单</string>
    <string name="my_meal">我的套餐</string>
    <string name="appointment_show">预约展示</string>
    <string name="username">用户名</string>
    <string name="voice_time">就诊时间</string>
    <string name="health_records">健康档案</string>
    <string name="free_consultation">免费咨询</string>
    <string name="family_doctor">家庭医生</string>
    <string name="healthy_mall">健康商城</string>
    <string name="administrative">科室</string>
    <string name="sorting_type">排序类型</string>
    <string name="screening">筛选</string>
    <string name="region">地区</string>
    <string name="published_comment">发表评价</string>
    <string name="comment_succeed">评价成功</string>
    <string name="comment_failure">评价失败</string>
    <string name="delete_succeed">刪除成功</string>
    <string name="cancel_succeed">取消成功</string>
    <string name="delete_failure">刪除失败</string>
    <string name="cancel_failure">取消失败</string>
    <string name="published_comment_context">请输入评价内容!</string>
    <string name="search_doctors_for_diseases">搜索医生 科室 疾病</string>
    <string name="add_user">就诊人</string>
    <string name="select_user">就诊人:</string>
    <string name="add_type_no">证件类型</string>
    <string name="add_No">证件号码</string>
    <string name="add_sex">性别</string>
    <string name="add_record">电子病历</string>
    <string name="recordType">病历</string>
    <string name="add_date">出生日期</string>
    <string name="add_phone">手机号码</string>
    <string name="add_postcode">邮编</string>
    <string name="add_id_number">身份证号</string>
    <string name="add_relationship">关系</string>
    <string name="add_isMarried">婚史</string>
    <string name="add_city">所在城市</string>
    <string name="add_location">详细地址</string>
    <string name="add_postcode_loc">邮政编码</string>
    <string name="reside_location">居住地地</string>
    <string name="select_doc">就诊医生</string>
    <string name="appointment_time">预约时间</string>
    <string name="select_appointment_time">请选择预约时间</string>
    <string name="combined">合计</string>
    <string name="to_evaluate">去评价</string>
    <string name="evaluate">评价</string>
    <string name="appointment_success">预约成功</string>
    <string name="to_make_appointment">可预约</string>
    <string name="to">至</string>
    <string name="yi_delete">已删除</string>
    <string name="yi_cancel">已取消</string>
    <string name="pay">支付</string>
    <string name="not_pay">未支付</string>
    <string name="yi_pay">已支付</string>
    <string name="yi_completed">已完成</string>
    <string name="have_reply">已回复</string>
    <string name="no_clinical_visit">未就诊</string>
    <string name="yes_clinical_visit">已就诊</string>
    <string name="check_the_record">查看记录</string>
    <string name="enter_the_office">进入诊室</string>
    <string name="cancel_order">取消订单</string>
    <string name="delete_order">删除订单</string>
    <string name="system_title">系统提示</string>
    <string name="is_delete">是否要删除</string>
    <string name="is_delete_order">是否要删除订单</string>
    <string name="is_cancel_order">是否要取消订单</string>
    <string name="is_exit">确定退出吗?</string>
    <string name="is_cargo">是否确定收货?</string>
    <string name="back">返回</string>
    <string name="delete">删除</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="dialog_title">提示</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="added">新增</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="photograph">拍照</string>
    <string name="select_photo">从照片中选择</string>
    <string name="error_null">暂无数据,快去新增吧~</string>
    <string name="error_advice_null">暂无数据</string>
    <string name="set_default_caller">设置默认就诊人</string>
    <string name="set_default_dispatching">设置默认地址成功</string>
    <string name="error_user">暂无就诊人,快去个人中心新增吧~</string>
    <string name="user_null">就诊人不能为空</string>
    <string name="no_type_null">证件类型不能为空</string>
    <string name="no_number_null">证件号码不能为空</string>
    <string name="sex_null">性别不能为空</string>
    <string name="date_null">出生日期不能为空</string>
    <string name="phone_null">手机号不能为空</string>
    <string name="relation_null">关系不能为空</string>
    <string name="tv_isMarried_null">婚史不能为空</string>
    <string name="city_null">所在城市不能为空</string>
    <string name="detailed_address_null">详细地址不能为空</string>
    <string name="user_address_null">收货人不能为空</string>
    <string name="select_your_region">请选择所在地区</string>
    <string name="user_name">就诊人姓名</string>
    <string name="please_name_person">请填写就诊人姓名</string>
    <string name="id_card_number">身份证号码</string>
    <string name="please_id_card_number">请填写身份证号码</string>
    <string name="please_phone_number">请填写手机号码</string>
    <string name="please_address">请填写详细地址</string>
    <string name="please_postcode">请填写所在地邮政编码</string>
    <string name="area">所在地区</string>
    <string name="please_nickname">请填写昵称</string>
    <string name="consignee">收货人</string>
    <string name="please_consignee_name">请填写收货人姓名</string>
    <string name="please_enter_id_number">请输入正确的身份证号</string>
    <string name="please_enter_phone_number">请输入正确的手机号码</string>
    <string name="add_user_null">新增就诊人成功!</string>
    <string name="city_select">城市选择</string>
    <string name="add_attention">+ 关注</string>
    <string name="followed">√ 已关注</string>
    <string name="attention_succeed">关注成功</string>
    <string name="attention_failure">关注失败</string>
    <string name="cancel_attention">已取消关注!</string>
    <string name="cancel_attention_failure">取消关注失败</string>
    <string name="other_comments_suggestions">其他意见或建议</string>
    <string name="comments">条评论</string>
    <string name="patients">名患者</string>
    <string name="evaluation_patients">患者评价</string>
    <string name="more_patients">更多评价</string>
    <string name="load_in" tools:ignore="TypographyEllipsis">加载中...</string>
    <string name="patient_information">就诊人</string>
    <string name="please_select">请选择</string>
    <string name="disease_name">疾病名称</string>
    <string name="disease_particulars">疾病详情</string>
    <string name="disease_name_content">请填写需要咨询的疾病内容</string>
    <string name="disease_name_particulars">请填写需要咨询的疾病详情</string>
    <string name="disease_cannot_name_empty">疾病名称不能为空</string>
    <string name="disease_cannot_empty">疾病详情不能为空</string>
    <string name="pic_tree">添加图片，最多三张</string>
    <string name="buy">购 买</string>
    <string name="advisory">咨 询</string>
    <string name="submit">提交</string>
    <string name="modification">修改</string>
    <string name="submit_failure">提交失败</string>
    <string name="succeed">成功</string>
    <string name="email_succeed">邮件发送成功</string>
    <string name="email_failure">邮件发送失败</string>
    <string name="add_pictures">可添加图片</string>
    <string name="cancel_waiting">取消等待</string>
    <string name="waiting_doctor">等待医生接诊......</string>
    <string name="basic_file">基础档案</string>
    <string name="health_history">健康史</string>
    <string name="mental_health">心理健康</string>
    <string name="physical_examination_data">体检数据</string>
    <string name="health_assessment">健康评估</string>
    <string name="nothing">无</string>
    <string name="high_blood_pressure">高血压</string>
    <string name="heart_disease">心脏病</string>
    <string name="family_history">家族病史</string>
    <string name="parents_siblings_grandparents">(父母亲 兄弟姐妹 祖父母)</string>
    <string name="diseases_history">疾病史</string>
    <string name="history_history">(含现病史和既往病史)</string>
    <string name="family_history_empty">家族病史和疾病史不能为空</string>
    <string name="name">姓名</string>
    <string name="address">居住地址</string>
    <string name="is_marriage">婚姻史</string>
    <string name="web_error">抱歉~\n加载失败,点击重新加载</string>
    <string name="call_version_inconsistent">Both call version are inconsistent</string>
    <string name="switch_camera">Switch camera</string>
    <string name="capture_image">Capture image</string>
    <string name="network_unstable">Network unstable</string>
    <string name="no_call_data">No call data</string>
</resources>