<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:divider="@drawable/shape_rv_divider"
    android:orientation="vertical"
    android:showDividers="middle">

    <include layout="@layout/base_activity_head"/>

    <Switch
        android:id="@+id/st_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_15"
        android:singleLine="true"
        android:switchMinWidth="0dp"
        android:visibility="gone"
        android:text="@string/push_notifications"
        android:textColor="@color/txtSuperColor"
        android:textOff=""
        android:textOn=""
        android:textSize="@dimen/sp_16"
        android:thumb="@drawable/selector_switch_thumb"
        android:track="@drawable/selector_switch_track" />

    <TextView
        android:id="@+id/Ll_ModifyPs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_ripple_rect"
        android:padding="@dimen/dp_15"
        android:text="@string/password_modification"
        android:textColor="@color/txtSuperColor"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/Ll_feedBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_ripple_rect"
        android:padding="@dimen/dp_15"
        android:text="@string/feedback"
        android:textColor="@color/txtSuperColor"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_ripple_rect"
        android:padding="@dimen/dp_15"
        android:text="@string/exit_login"
        android:textColor="@color/txtSuperColor"
        android:textSize="@dimen/sp_16" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>