<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:paddingBottom="14dp"
        android:paddingTop="8dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/edit_search"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_input_bg"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/vector_search"
                android:hint="@string/search_doctors_for_diseases"
                android:imeOptions="actionSearch"
                android:padding="8dp"
                android:textColor="@color/txtSecondColor"
                android:textCursorDrawable="@null"
                android:clickable="true"
                android:focusable="false"
                android:textSize="@dimen/sp_12"/>

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgMsg"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/svg_msg"/>

    </LinearLayout>


    <com.bigkoo.convenientbanner.ConvenientBanner
            android:id="@+id/convenientBanner"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:padding="@dimen/dp_10"
            android:layout_marginTop="6dp"
            app:canLoop="true"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

        <TextView
                android:id="@+id/tvFunBtn1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/svg_archives"
                android:gravity="center"
                android:paddingStart="4dp"
                android:text="@string/health_records"
                android:textColor="@color/txtSecondColor"
                android:textSize="@dimen/txt_small"/>

        <TextView
                android:id="@+id/tvFunBtn2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/svg_consultation"
                android:gravity="center"
                android:text="@string/free_consultation"
                android:textColor="@color/txtSecondColor"
                android:textSize="@dimen/txt_small"/>

        <TextView
                android:id="@+id/tvFunBtn3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/svg_doctor"
                android:gravity="center"
                android:text="@string/family_doctor"
                android:textColor="@color/txtSecondColor"
                android:textSize="@dimen/txt_small"/>

        <TextView
                android:id="@+id/tvFunBtn4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/svg_shoppingmall"
                android:gravity="center"
                android:text="@string/healthy_mall"
                android:textColor="@color/txtSecondColor"
                android:textSize="@dimen/txt_small"/>

    </LinearLayout>

</LinearLayout>