<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="12dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_input_bg"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/vector_search"
            android:hint="@string/search_doctors_for_diseases"
            android:imeOptions="actionSearch"
            android:padding="8dp"
            android:textColor="@color/txtSecondColor"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/sp_12" />
    </RelativeLayout>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@mipmap/icon_banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_tv_dept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_dept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/svg_arrow_drop_down_black"
                android:gravity="center"
                android:text="@string/administrative"
                android:textColor="#666666" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tv_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/svg_arrow_drop_down_black"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/sorting_type"
                android:textColor="#666666" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:visibility="gone">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/svg_arrow_drop_down_black"
                android:gravity="center"
                android:text="@string/screening"
                android:textColor="#666666" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:visibility="gone">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/svg_arrow_drop_down_black"
                android:gravity="center"
                android:text="@string/region"
                android:textColor="#666666" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>